disable animation on app icons, fix overlapping width

--- a/main.css
+++ b/main.css
@@ -167,6 +167,7 @@ a:hover {
     #apps .apps-wrapper {
         min-height: 330px;
         max-height: 500px;
+
         overflow-y: auto;
     }
     #apps .title {
@@ -176,30 +177,23 @@ a:hover {
         text-align: center;
     }
     #apps .app {
-        display: inline-block;
+        float: left;
 
-        width: 155px;
+        width: 135px;
         height: 155px;
 
-        margin-bottom: 10px;
+        margin: 0 10px 10px 10px;
 
         text-align: center;
     }
     #apps .app .wrapper {
         position: relative;
 
-        width: 134px;
+        width: 135px;
         height: 150px;
-
-        margin: auto;
-        top: 0;
-        -webkit-transition: all 0.25s;
     }
     #apps .app .wrapper:hover {
         cursor: pointer;
-
-        height: 155px;
-        top: -5px;
     }
     #apps .app img {
         display: block;
